--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "mcamara/laravel-localization": "^1.3",
         "phpoffice/phpspreadsheet": "^1.6",
-        "mateusjunges/laravel-acl": "2.1.*",
-        "spatie/laravel-translatable": "^4.2"
+        "mateusjunges/laravel-acl": "2.2.*",
+        "spatie/laravel-translatable": "^4.2",
+        "barryvdh/laravel-debugbar": "^3.2"
     },
     "autoload": {
         "files": [
