--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "mateusjunges/laravel-acl": "2.4.*",
         "spatie/laravel-translatable": "^4.3",
         "barryvdh/laravel-debugbar": "^3.2",
+        "arcanedev/log-viewer": "^7.0",
         "webpatser/laravel-uuid": "^3.0"
     },
     "autoload": {
