--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "doctrine/dbal": "^3.0",
         "mateusjunges/laravel-acl": "^2.4",
         "mcamara/laravel-localization": "^1.6",
-        "diglactic/laravel-breadcrumbs": "^6.0",
+        "diglactic/laravel-breadcrumbs": "^6.0"
         
     },
     "autoload": {
