Blade::directive('hap'

--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,18 @@
     "require": {
         "barryvdh/laravel-dompdf": "^1.0.2",
         "doctrine/dbal": "^3.4",
-        "diglactic/laravel-breadcrumbs": "7.x",
+        "diglactic/laravel-breadcrumbs": "7.x|^8.0",
         "mcamara/laravel-localization": "^1.7",
         "phpoffice/phpspreadsheet": "^1.24",
         "mateusjunges/laravel-acl": "^3.0",
-        "spatie/laravel-translatable": "^4.6",
+        "spatie/laravel-translatable": "^5.2",
         "barryvdh/laravel-debugbar": "^3.6",
-        "arcanedev/log-viewer": "^8.2",
+        "arcanedev/log-viewer": "^8.3|^9.0",
         "webpatser/laravel-uuid": "^4.0",
         "jenssegers/date": "^4.0",
         "fabpot/goutte": "^4.0",
-        "guzzlehttp/guzzle": "^7.4",
-        "laravel/ui": "^3.4",
+        "guzzlehttp/guzzle": "^7.5",
+        "laravel/ui": "^3.4|^4.0|^5.0",
         "orangehill/iseed": "^3.0",
         "tinify/tinify": "^1.5",
         "aporteweb/console-select": "dev-main"
